# lookback

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .trellens  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  lock-high.json  lock.json  pyproject.toml  renovate.json  requirements.txt  update.ps1
.github/: SECURITY.md  issue_template.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q-a.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  internal.yaml
.github/workflows/: codeql-analysis.yml  contrib.yml
.tools/: pyproject.toml
.tools/requirements/: requirements.txt  requirements_both.txt
changelog/: towncrier_template.md.jinja
docs/: conf.py  contributing.md  index.md  pyproject.toml
docs/lookback_docs/: docstrings.py  intersphinx.py
requirements/: requirements.txt
scripts/: Sync-Py.ps1  pyproject.toml
scripts/lookback_tools/: __main__.py  add_changes.py  sync.py
src/lookback/: __init__.py  __main__.py  api.py  board.py  cli.py  configs.py  defaults.py  rich.py
src/past/: __init__.py  __main__.py  api.py  cli.py  configs.py  defaults.py
src/pastime/: __init__.py  __main__.py  api.py  cli.py  configs.py  defaults.py
src/thread/: __init__.py  __main__.py  api.py  cli.py  configs.py  defaults.py
tests/: pyproject.toml  test_lookback.py  test_thread.py
tests/lookback_tests/: test_lookback.py
