[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "pastime"
requires-python = ">=3.11"
dependencies = [ "datamodel-code-generator~=0.16.0", "pyperclip~=1.8.2", "typer~=0.7.0",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+pastime@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/pastime"

[project.scripts]
pastime = "pastime.cli:app"

[project.optional-dependencies]
