[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "lookback"
requires-python = ">=3.11"
dependencies = [ "datamodel-code-generator~=0.17.0", "pyperclip~=1.8.2", "typer~=0.7.0", "rich~=13.3.1",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+lookback@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/lookback"

[tool.ruff]
fix = true
select = [ "ALL",]
src = [ "src", "tests",]
target-version = "py311"
extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "DTZ", "E501", "EM", "ERA", "FBT", "INP001", "ISC", "PD013", "PD901", "PGH003", "RET", "TCH", "TRY003",]
unfixable = [ "F601",]

[tool.ruff.per-file-ignores]
"tests/**" = [ "ARG001", "S101",]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]

[tool.ruff.pep8-naming]
classmethod-decorators = [ "pydantic.validator",]
