[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "lookback"
version = "0.0.0"
description = "Utilities for analyzing Trello boards for time tracking, estimation, report writing, and more"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "License :: OSI Approved :: MIT License",]
dependencies = [ "datamodel-code-generator~=0.19.0", "pyperclip~=1.8.2", "typer~=0.9.0", "rich~=13.3.1",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato+lookback@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Changes = "https://github.com/blakeNaccarato/lookback/changelog.html"
Docs = "https://github.com/blakeNaccarato.github.io/lookback"
Home = "https://github.com/blakeNaccarato/lookback"
Tracker = "https://github.com/blakeNaccarato/lookback/issues"

[tool.ruff]
fix = true
select = [ "ALL",]
src = [ "src", "tests",]
target-version = "py311"
extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "D402", "DTZ", "E501", "EM", "ERA", "FBT", "F841", "G0", "INP001", "ISC", "PD013", "PD901", "PD011", "PGH003", "PLR0913", "PLW2901", "RET", "S301", "TCH", "TRY003", "W2", "B018", "F821", "S101", "T201",]
unfixable = [ "F601",]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
split-on-trailing-comma = false

[tool.ruff.per-file-ignores]
"tests/**" = [ "ARG001", "S101",]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]

[tool.ruff.pep8-naming]
classmethod-decorators = [ "pydantic.validator",]
