[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "lookback_tools"
version = "0.0.0"
description = "Tools."
dependencies = [
    # ? Core script tools
    "copier==9.9.1",
    "cyclopts==2.7.0",
    "dulwich==0.22.1",
    "ipython==8.25.0",
    "pipx==1.6.0",
]
[project.scripts]
"lookback_tools" = "lookback_tools.__main__:main"

[tool.fawltydeps]
deps = ["scripts/pyproject.toml"]
code = ["scripts/lookback_tools"]
ignore_undeclared = [
    "lookback_docs",
    "lookback_tests",
    "lookback_tools",
    "lookback",
]
ignore_unused = [
    # ? Core script tools
    "copier", # For template sync
    "pipx",   # For `pipx run` of scripts with dependencies isolated by PEP 723
    # ? Other deps
    "ipython", # Used for local experimentation
]
